--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.ts",
+        "src": "backend/index.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/backend/index.ts"
+        "src": "/api/(.*)",
+        "dest": "backend/index.ts"
       }
     ]
   }
