--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "backend/index.ts"
+        "dest": "/index.ts"
       }
     ]
   }
